syntax = "proto3";

package rpc;
option go_package = "proto;proto";

message Product {
  string id = 1;
  string name = 2;
  int64 price = 3;
  int32 quantity = 4;
}

message CreateProductRequest {
  Product product = 1;
}

message CreateProductResponse {
  Product product = 1;
}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message DeleteProductRequest {
  string product_id = 1;
}

message DeleteProductResponse {
  string product_id = 1;
}

message ListProductRequest {}

message ListProductResponse {
  repeated Product product = 1;
}

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
  rpc ListProduct (ListProductRequest) returns (ListProductResponse);
}